tests/error/poly_errors_py312/dependent_backwards.err
Error: Variable not defined (at $FILE:6:11)
  | 
4 | 
5 | @guppy
6 | def foo[x: T, T: (Copy, Drop)]() -> None:
  |            ^ `T` is not defined

Guppy compilation failed due to 1 previous error
